package rina.messages;
option java_package="rina.encoding.impl.googleprotobuf.flowservice";
import "protofiles/ApplicationProcessNamingInfoMessage.proto";
import "protofiles/QoSSpecification.proto";

message FlowService{  //Contains the information of a flow service
	optional rina.messages.applicationProcessNamingInfo_t sourceNamingInfo = 1;  			//The naming information of the source application process
	required rina.messages.applicationProcessNamingInfo_t destinationNamingInfo = 2; 		//The naming information of the destination application process
	optional rina.messages.qosSpecification_t qosSpecification = 3; 				//The QoS information required for the flow
	optional uint64 portId = 4; 										//The port id allocated to this flow by the source IPC process
}