package rina.messages;
option java_package="rina.encoding.impl.googleprotobuf.whatevercast";
import "protofiles/WhatevercastNameMessage.proto";

message whatevercastNames_t{   //carries information about all the whatevercast names
	repeated whatevercastName_t whatevercastName = 1;
}